objects/CAPN__EmailToCase__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CAPN__AllowAttachments__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAPN__DeleteEmailAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Checked, Attachments will be deleted from email. This option will take effect only in case Allow Attachment option is enabled.</inlineHelpText>
        <label>Delete Email Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAPN__Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Email</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Email To Case</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CAPN__AllowAttachments__c</columns>
        <columns>CAPN__DeleteEmailAttachment__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>